src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>China Support Process</fullName>
        <description>China Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Finance Support Process</fullName>
        <description>Provide the ability to manage case statuses for Finance.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Finance Approved</fullName>
        </values>
        <values>
            <fullName>Finance Rejected</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pro Services Support Process</fullName>
        <description>Providing ability to manage case statuses for Pro Services</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>US Support Process</fullName>
        <description>US Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sent</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field s to determine the yard sign contact</description>
        <label>Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Account Contact)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>To be used for SAP email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Added_water_to_the_paint__c</fullName>
        <label>Added water to the paint?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Instructions__c</fullName>
        <description>This field is used to add the instructions</description>
        <label>Additional Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Monetory_Refund__c</fullName>
        <label>Additional Monetary Refund</label>
        <picklist>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Damage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Services_Needed__c</fullName>
        <label>Additional Services Needed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Account Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Setup Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Credit_Terms__c</fullName>
        <label>Approved Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Cash in Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>add to drawdown to indicate the architect</description>
        <label>Architect</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Architect)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Architectural_Considerations__c</fullName>
        <description>This field determines whethere Architectural or historic style that needs to be considered</description>
        <label>Architectural Considerations</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_There_Color_Renderings_On_The_Board__c</fullName>
        <description>To check if or not if the color renderings exist on board.</description>
        <label>Are There Color Renderings On The Board</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_Case_to__c</fullName>
        <label>Assign Case To</label>
        <picklist>
            <picklistValues>
                <fullName>Inspector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting (returns)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_of_colors_per_scheme__c</fullName>
        <formula>If(of_schemes__c=0,0,
total_of_colors__c / of_schemes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. # Of Colors Per Scheme</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behr_Color_Name__c</fullName>
        <description>Name of the color</description>
        <label>Behr Color Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behr_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to define the Behr representative</description>
        <label>Behr Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bond_Company__c</fullName>
        <description>Name of Bond for school on job sheet</description>
        <label>Bond Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Company_phone__c</fullName>
        <description>Phone # for bond company</description>
        <label>Bond Company phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bond__c</fullName>
        <description>Bond #  (The bond company acts like an insurance company for municipalities)</description>
        <label>Bond #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_State_Zip__c</fullName>
        <label>City, State, Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows to chose the person who approved the color.</description>
        <label>Color Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Color_Board_Type__c</fullName>
        <label>Color Board Type</label>
        <picklist>
            <picklistValues>
                <fullName>With Chips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color_BookBoard_Type__c</fullName>
        <label>Color Book/Board Type</label>
        <picklist>
            <picklistValues>
                <fullName>Color Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Submittal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Out Book</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color_Chosen__c</fullName>
        <label>Color Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Family_Preference__c</fullName>
        <description>This field allows to select preference for family</description>
        <inlineHelpText>Reds: apple, burgandy
Oranges: rust, terracotta, apricot
Violets
Greens: spring, olive, forest
Yellows: gold, honey, wheat, bronze
Blues: aqua, blue, sky blue</inlineHelpText>
        <label>Color Family Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Reds: apple, burgandy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oranges: rust, terracotta, sienna, apric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greens: spring, olive, forest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellows: gold, honey, wheat, bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blues: aqua, blue, sky blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color_Family__c</fullName>
        <description>This field defines what color family wanted to see</description>
        <label>Color Family</label>
        <picklist>
            <picklistValues>
                <fullName>Reds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oranges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violets</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Color_Formulas_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verify if or not there is a requirement for the color formulas</description>
        <label>Color Formulas Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color_Lab_Activation_Request_Submitted__c</fullName>
        <label>Color Lab Activation Request Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color_Rendering_Services_Needed__c</fullName>
        <label>Color Rendering Services Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color_Services_Request_Attached_NonBehr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Color Services Request Attached(NonBehr)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color_Services_Request_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A clarification on the need for color services activation form.</description>
        <label>Color Services Request Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Color_Numbers__c</fullName>
        <label>Competitor&apos;s Color Numbers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Color_Samples__c</fullName>
        <label>Competitor&apos;s Color Samples</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors_Color_Names__c</fullName>
        <label>Competitor&apos;s Color Names</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_No_On_Yard_Sign__c</fullName>
        <description>This field is to determine the contact no on yard sign</description>
        <label>Contact # On Yard Sign</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Region__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_user_check__c</fullName>
        <formula>IF(CreatedById = $User.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created User Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to determine whether customer logo is required or not</description>
        <label>Customer Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By__c</fullName>
        <inlineHelpText>Does Not Include Ship Time</inlineHelpText>
        <label>Date Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_ETA__c</fullName>
        <description>Estimated delivery date details.</description>
        <inlineHelpText>Does Not Include Ship Time</inlineHelpText>
        <label>Delivery ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Onboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to determine the relationship between direct onboarding and Case(credit review)</description>
        <label>Direct Onboarding</label>
        <referenceTo>Direct_Onboarding__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dry_Sample_Description__c</fullName>
        <label>Dry Sample Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Spend_Amount__c</fullName>
        <formula>Account.Estimated_Annual_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exposed_to_moisture_2_Weeks__c</fullName>
        <label>Exposed to moisture &lt; 2 Weeks</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ext_Colors_To_Avoid__c</fullName>
        <description>This field is to determine the colors to avoid if any</description>
        <label>Colors To Avoid (exterior)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Preferred_Color_Scheme__c</fullName>
        <description>This field represents the color scheme to customer</description>
        <label>Preferred Color Scheme (exterior)</label>
        <picklist>
            <picklistValues>
                <fullName>Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Tone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Favorite_Colors_To_Include__c</fullName>
        <description>This field determines the favourite color to be included</description>
        <label>Favorite Colors To Include</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Address__c</fullName>
        <label>GC Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_City__c</fullName>
        <label>GC City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Country__c</fullName>
        <label>GC Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_State__c</fullName>
        <label>GC State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Zip__c</fullName>
        <label>GC Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gallon__c</fullName>
        <label>Estimated Monthly Paint Usage</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;50 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-124 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;125 Gallons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Contractor__c</fullName>
        <inlineHelpText>General Contractor = GC</inlineHelpText>
        <label>General Contractor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidelines_Number__c</fullName>
        <formula>IF($RecordType.Name = &quot;Yard Sign&quot;, 21, 
IF($RecordType.Name = &quot;Color Recommendation&quot;, 2,
IF($RecordType.Name = &quot;Digital Renderings&quot;,3,
IF($RecordType.Name = &quot;Color Matching&quot;,3,
IF($RecordType.Name = &quot;Draw Down&quot;,2,  
IF(AND($RecordType.Name = &quot;Color Book/Board&quot;,ISPICKVAL(Color_BookBoard_Type__c, &quot;Color Book&quot;)),4,
IF(AND($RecordType.Name = &quot;Color Book/Board&quot;,ISPICKVAL(Color_BookBoard_Type__c,&quot;ColorBoard&quot;)),14, 
NULL)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guidelines Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOA_Color_Rendering_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to check if there is a requirement for HOA color rendering.</description>
        <label>HOA Color Rendering Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_the_Customer_Contacted_the_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has the Customer Contacted the Dealer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_the_Customer_Purchased_the_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has the Customer Purchased the Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highlighted_Features__c</fullName>
        <description>This field is used to highlight features if any</description>
        <label>Highlighted Features</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Rush_Reason__c</fullName>
        <description>The reason for checking the hot rush shall be given here.</description>
        <label>Hot Rush Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Many_Sets__c</fullName>
        <label>How Many Sets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_is_the_surface_prepared__c</fullName>
        <label>How is the surface prepared</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_long_between_coats_in_hrs__c</fullName>
        <label>How long between coats?(in hrs)</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 and over</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_coats_applied__c</fullName>
        <label>How many coats applied?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_much_product_was_applied__c</fullName>
        <label>How much product was applied</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_much_water_was_added__c</fullName>
        <label>How much water was added?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Please_Mention__c</fullName>
        <label>If Other Please Mention</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Painted_Substrate_Other__c</fullName>
        <label>If Painted Substrate Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Topic__c</fullName>
        <label>Inquiry Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painter Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Status__c</fullName>
        <label>Inspection Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Time__c</fullName>
        <label>Inspection Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Int_Colors_To_Avoid__c</fullName>
        <description>This field is determine the colors to avoid</description>
        <label>Colors To Avoid (interior)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Int_Preferred_Color_Scheme__c</fullName>
        <label>Preferred Color Scheme (interior)</label>
        <picklist>
            <picklistValues>
                <fullName>Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Tone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whites</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Property_Mgmt_Close_Out_Book_Behr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the property management is a close out book for behr clients.</description>
        <label>Is Property Mgmt Close Out Book (Behr)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_the_owner__c</fullName>
        <description>used as a validation for owner (contact lookup)</description>
        <label>Is this the owner?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bleed (Water, Nicotine, Smoke)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chalky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bubbling/Blistering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnishing/Scuffing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drying too Quickly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Reaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color not matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blotchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flashing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Diluted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brush/Roller Marks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alkali Burn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep Base Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint tacky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrinkle/Cracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fading/Color Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efflorescence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Length__c</fullName>
        <label>Job Length</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <inlineHelpText>Job # from FileMaker that is also used in ProofHQ</inlineHelpText>
        <label>Job Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Lot__c</fullName>
        <label>Legal Lot #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <description>This Field is to determine the license number</description>
        <label>License No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>